Added flash message

--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -40,6 +40,16 @@
       <main role="main" class="container">
         <div class="row">
           <div class="col-md-8">
+            <!--Allow to show any instance flash message across all pages as this is template-->
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                        <div class='alert-alert-{{ category }}'>
+                            {{message}}
+                        </div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
             {% block content %}{% endblock %}
           </div>
           <div class="col-md-4">
