--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -30,6 +30,7 @@
               <div class="navbar-nav">
                 <!--If the user is login, the we show the logout button-->
                 {% if current_user.is_authenticated %}
+                  <a class="nav-item nav-link" href="{{url_for('account_page')}}">Account</a>
                   <a class="nav-item nav-link" href="{{url_for('logout_page')}}">Logout</a>
                 {% else %}
                   <a class="nav-item nav-link" href="{{url_for('login_page')}}">Login</a>
