--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -2,13 +2,53 @@
 {% block content %}
     <div class="content-section">
         <div class="media">
-        <img class="rounded-circle account-img" src="{{ image_file }}"">
+        <img class="rounded-circle account-img" src="{{ image_file }}">
         <div class="media-body">
             <h2 class="account-heading">{{ current_user.username }}</h2>
             <p class="text-secondary">{{ current_user.email }}</p>
         </div>
         </div>
-        <!-- FORM HERE -->
+        <form method="POST" action="">
+            <!-- this method will add the CSRF token to protect the form certain attack -->
+            {{ form.hidden_tag() }}
+            <fieldset class='form-group'>
+                <legend class="border-bottom mb-4">Account Info</legend>
+                <div class="form-group">
+                    {{ form.username.label(class="form-control-label") }}
+                    
+                    <!--If the form has error, then it make the field red and will print out the form field and error-->
+                    {%if form.username.errors %}
+                        {{ form.username(class="form-control form-control-lg is-invalid")}}
+                        <div class="invalid-feedback">
+                            {% for error in form.username.errors %}
+                                <span>{{error}}</span>
+                            {% endfor %}
+                        </div>
+                    {%else%}
+                        {{ form.username(class="form-control form-control-lg") }}
+                    {%endif%}
+                    
+                </div>
+                <div class="form-group">
+                    {{ form.email.label(class="form-control-label") }}
+
+                    <!--If the form has error, then it make the field red and will print out the form field and error-->
+                    {%if form.email.errors %}
+                        {{ form.email(class="form-control form-control-lg is-invalid")}}
+                        <div class="invalid-feedback">
+                            {% for error in form.email.errors %}
+                                <span>{{error}}</span>
+                            {% endfor %}
+                        </div>
+                    {%else%}
+                        {{ form.email(class="form-control form-control-lg") }}
+                    {%endif%}
+                </div>
+            </fieldset>
+            <div class="form-group">
+                {{ form.submit(class="btn btn-outline-info") }}
+            </div>
+        </form>
     </div>
 {% endblock content%}
 
