--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -8,7 +8,8 @@
             <p class="text-secondary">{{ current_user.email }}</p>
         </div>
         </div>
-        <form method="POST" action="">
+        <!-- Add encoding for image upload properly -->
+        <form method="POST" action="" enctype="multipart/form-data">
             <!-- this method will add the CSRF token to protect the form certain attack -->
             {{ form.hidden_tag() }}
             <fieldset class='form-group'>
@@ -43,6 +44,15 @@
                     {%else%}
                         {{ form.email(class="form-control form-control-lg") }}
                     {%endif%}
+                </div>
+                <div class="form-group">
+                    {{ form.picture.label()}}
+                    {{ form.picture(class="form-control-file") }}
+                    {% if form.picture.errors %}
+                        {% for error in form.picture.errors %}
+                            <span class="text-danger">{{ error }}</span></br>
+                        {% endfor %}
+                    {% endif %}
                 </div>
             </fieldset>
             <div class="form-group">
